--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,37 @@
 #root {
   height: 100vh;
 }
+
+@supports (height: 100dvh) {
+  :root {
+      --viewport-height: 100dvh;
+  }
+  .h-screen {
+      height: 100dvh;
+  }
+  .max-h-screen {
+      max-height: 100dvh;
+  }
+}
+@supports (-webkit-touch-callout: none) {
+  :root {
+      --viewport-height: -webkit-fill-available;
+  }
+  .h-screen {
+      height: -webkit-fill-available;
+  }
+  .max-h-screen {
+      max-height: -webkit-fill-available;
+  }
+}
+@supports (height: -webkit-fill-available) {
+  :root {
+      --viewport-height: -webkit-fill-available;
+  }
+  .h-screen {
+      height: -webkit-fill-available;
+  }
+  .max-h-screen {
+      max-height: -webkit-fill-available;
+  }
+}
