min-h-safe-screen TEST

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,9 @@
 #root {
   height: 100vh;
 }
+
+@supports (-webkit-touch-callout: none) {
+  .h-screen {
+    height: -webkit-fill-available;
+  }
+}
