Safari Height 100vh TEST

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,3 +34,9 @@
     padding: .5rem;
     border-radius: .5rem;
 }
+
+body {  min-height: 100vh;   
+    @supports (-webkit-touch-callout: none) {
+        min-height: -webkit-fill-available;
+    }
+}
