--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,8 +2,8 @@
   height: 100vh;
 }
 
-@supports (-webkit-touch-callout: none) {
+/* @supports (-webkit-touch-callout: none) {
   .h-screen {
     height: -webkit-fill-available;
   }
-}
+} */
