--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,8 +37,9 @@
 
 body {  
     min-height: 100vh;   
-    @supports (-webkit-touch-callout: none) {
-        min-height: -webkit-fill-available;
-        height: -webkit-fill-available;
-    }
+    min-height: -webkit-fill-available;
+}
+
+html {
+    height: -webkit-fill-available;
 }
