--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,15 @@
 #root {
   height: calc(var(--vh, 1vh) * 100);
 }
+
+.perspective {
+  perspective: 1000px;
+}
+
+.rotate-y-0 {
+  transform: rotateY(0);
+}
+
+.rotate-y-180 {
+  transform: rotateY(180deg);
+}
